[gd_scene load_steps=6 format=3 uid="uid://b5fd0njlivmkl"]

[ext_resource type="Texture2D" uid="uid://bgdsi7bejuct2" path="res://Art/Player/Attacks/axe.png" id="1_2ttsf"]
[ext_resource type="PackedScene" uid="uid://caufekfovd6qa" path="res://Util/Components/hitbox_component.tscn" id="1_3070s"]
[ext_resource type="Script" path="res://Objects/Attacks/axe.gd" id="1_p0hi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idh52"]
size = Vector2(7, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o73kp"]
size = Vector2(16, 16)

[node name="Axe" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 8
collision_mask = 51
script = ExtResource("1_p0hi4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2ttsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_idh52")

[node name="HitboxComponent" parent="." instance=ExtResource("1_3070s")]
collision_layer = 8
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_o73kp")

[node name="MaxTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="MaxTimer" to="." method="_on_max_timer_timeout"]
